# scout-navigator

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  styles.css
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/: lib.rs  rover.rs
src/components/: canvas.rs  controls.rs  help_bubble.rs  main_app.rs  mod.rs
src/pathfinding/: astar.rs  dstar_lite.rs  field_dstar.rs  mod.rs  pathfinder_trait.rs
