[package]
name = "scout"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core Yew framework
yew = { version = "0.21", features = ["csr"] }

# WebAssembly bindings
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

# Gloo utilities for browser APIs
gloo = "0.10"
gloo-timers = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random number generation
rand = "0.8"

# JavaScript and Web APIs
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document", 
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "MouseEvent",
    "HtmlInputElement",
    "HtmlSelectElement",
    "KeyboardEvent",
    "Element",
    "DomRect",
    "HtmlElement",
    "DomTokenList",
    "HtmlBodyElement",
    "CssStyleDeclaration",
    "InputEvent",
    "Event",
] }

# Development server - tiny_http NOT warp/tokio
tiny_http = "0.8"

[[bin]]
name = "serve"
path = "src/bin/serve.rs"

[dev-dependencies]
wasm-bindgen-test = "0.3"